--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,66 @@ body {
   background-color: #f0f0f0;
   margin: 0;
   padding: 0;
+  background-color: #333;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  
 }
 
+/*titulo principal*/
 h1 {
+  color: #afaaaa;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  font-size: 45px;
+}
+
+/*contenedor info*/
+.popUp{
+  position: absolute;
+  top: 0;
+  background: rgb(224, 222, 222);
+  z-index: 100;  /*funciona para los pop-up*/
+  width: 250px;
+  border: #333 solid;
+  border-radius: 10px;
+  padding-left: 35px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+/*bandera*/
+img{
+  width: 200px;
+}
+
+/*nombre pais*/
+h2{
+  font-size: 16px;
+  color: #afaaaa;
+  display: flex;
+  justify-content: center;
+}
+/*contenedor nombre y bandera*/
+#countries-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+h3{
+  display: flex;
+  justify-content: left;
+  font-size: 14px;
   color: #333;
+
+}
+
+.buttonCerrar{
+  display: flex;
+  flex-wrap: wrap ;
+  justify-content: center;
 }
